--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -1,7 +1,40 @@
 body {
   font-family: Helvetica;
 }
+
+#root {
+  height: 100vh;
+}
+
 .app {
-  margin-top: 20px;
   margin-bottom: 20px;
+  display: flex;
+  height: 100%;
+}
+
+.channel-list {
+  padding-top: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  background: lightgrey;
+  width: 30%;
+  margin-left: 30px;
+}
+
+.message-list {
+  padding-left: 40px;
+}
+
+.channel {
+  color: grey;
+  padding-bottom: 20px;
+}
+
+.message-list {
+  width: 60%;
+}
+
+.active-channel {
+  color: black;
+  font-weight: bold;
 }
