--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -38,3 +38,14 @@ body {
   color: black;
   font-weight: bold;
 }
+
+.channel-title {
+  padding: 20px;
+  border-bottom: 0.5px lightgrey solid;
+
+}
+
+.message-form {
+  margin-top: 30px;
+  margin-left: 30px;
+}
